feat(cactus shulker): Added cactus shulker boxes, which voids any items hoppered into them.

--- a/src/main/resources/assets/shulker_utilities/lang/en_us.json
+++ b/src/main/resources/assets/shulker_utilities/lang/en_us.json
@@ -1,4 +1,21 @@
 {
   "item.shulker_utilities.shulker_assembly_kit": "Shulker Assembly Kit",
-  "item.shulker_utilities.shulker_disassembly_toolkit": "Shulker Disassembly Toolkit"
+  "item.shulker_utilities.shulker_disassembly_toolkit": "Shulker Disassembly Toolkit",
+  "item.shulker_utilities.shulker_box_cactus": "Shulker Box Cactus",
+  "item.shulker_utilities.white_shulker_box_cactus": "White Shulker Box Cactus",
+  "item.shulker_utilities.orange_shulker_box_cactus": "Orange Shulker Box Cactus",
+  "item.shulker_utilities.magenta_shulker_box_cactus": "Magenta Shulker Box Cactus",
+  "item.shulker_utilities.light_blue_shulker_box_cactus": "Light Blue Shulker Box Cactus",
+  "item.shulker_utilities.yellow_shulker_box_cactus": "Yellow Shulker Box Cactus",
+  "item.shulker_utilities.lime_shulker_box_cactus": "Lime Shulker Box Cactus",
+  "item.shulker_utilities.pink_shulker_box_cactus": "Pink Shulker Box Cactus",
+  "item.shulker_utilities.gray_shulker_box_cactus": "Gray Shulker Box Cactus",
+  "item.shulker_utilities.light_gray_shulker_box_cactus": "Light Gray Shulker Box Cactus",
+  "item.shulker_utilities.cyan_shulker_box_cactus": "Cyan Shulker Box Cactus",
+  "item.shulker_utilities.purple_shulker_box_cactus": "Purple Shulker Box Cactus",
+  "item.shulker_utilities.blue_shulker_box_cactus": "Blue Shulker Box Cactus",
+  "item.shulker_utilities.brown_shulker_box_cactus": "Brown Shulker Box Cactus",
+  "item.shulker_utilities.green_shulker_box_cactus": "Green Shulker Box Cactus",
+  "item.shulker_utilities.red_shulker_box_cactus": "Red Shulker Box Cactus",
+  "item.shulker_utilities.black_shulker_box_cactus": "Black Shulker Box Cactus"
 }
